SimGrid (3.0.2) unstable; urgency=low

  * 

 --

SimGrid (3.0.1) unstable; urgency=low

  XBT:
  * Unfortunately, I had missed 5 misnamed functions:
      xbt_fifo_item_t xbt_fifo_newitem(void);
      void xbt_fifo_freeitem(xbt_fifo_item_t);
      xbt_fifo_item_t xbt_fifo_getFirstItem(xbt_fifo_t l);
      xbt_fifo_item_t xbt_fifo_getNextItem(xbt_fifo_item_t i);
      xbt_fifo_item_t xbt_fifo_getPrevItem(xbt_fifo_item_t i);
    They're now deprecated. Please use their new versions:
      xbt_fifo_item_t xbt_fifo_new_item(void);
      void xbt_fifo_free_item(xbt_fifo_item_t);
      xbt_fifo_item_t xbt_fifo_get_first_item(xbt_fifo_t l);
      xbt_fifo_item_t xbt_fifo_get_next_item(xbt_fifo_item_t i);
      xbt_fifo_item_t xbt_fifo_get_prev_item(xbt_fifo_item_t i);
    [AL]
  * Bugfix: really disconnect fifo items which are remove_item()ed [AL]
  * Documentation: xbt_log module unmercifully reworked [MQ]
  * Bugfix: there was a problem with the ending of contexts with 
    the pthread backend. It caused some weird deadlock or behavior
    depending on the pthread implementation. [AL]
  * Bugfix: get the exceptions raised in the simulator repport where
    and why they come from when they are not catched in time [AL, MQ]

  SURF:
  * Bugfix: Do repport the error when two non-connected hosts try to
    exchange data (Thanks to Flavien for stumbling into this one) [AL]
  
  SURF:
  * Add additionnal checkings on communications. Assert that two
    communicating hosts are connected by a set of links... [AL]
	
  MSG:
  * Add additionnal checkings on channel values in communication [AL]
  * New: MSG_task_get_source to see on which host a task was generated [HC]
  * New: int MSG_task_probe_from_host(int channel, m_host_t host): returns
    the number of tasks waiting to be received on channel and sent
    by host. [AL]
  * New: MSG_error_t MSG_task_get_from_host(m_task_t * task, int channel, m_host_t host); 
    waits for the first task coming from a given host.. [AL]
	