@@ -25,5 +25,6 @@
 #include <xbt/heap.h>
 
 #include <xbt/config.h>
+#include <xbt/testsuite.h>
 
 #endif /* xbt_H */
